--- a/src/css/inc/tab-content.css
+++ b/src/css/inc/tab-content.css
@@ -1,7 +1,10 @@
 tab-panel {
-    display: flex;
+    display: none;
     gap: 2.5rem;
     flex-wrap: wrap;
+    &.active {
+        display: flex
+    }
 }
 
 tab-content {
