--- a/src/css/inc/tab-handle.css
+++ b/src/css/inc/tab-handle.css
@@ -1,13 +1,34 @@
 tab-handle {
-    // for more props see tab-navi .tab
-    
+  display: flex;
+  cursor: pointer;
+  border-right: var(--border);
+  border-radius: var(--border-radius) var(--border-radius) 0 0;
+  padding: 0 1rem;
+  gap: .5rem;
+  &:hover:not(.active) {
+    background: var(--bg-4-color);
+  }
+
+  & .closer {
+    font-size: 1rem;
+    display: none;
+    line-height: 1.8;
+    position: relative;
+    left: 0.8rem;
+    top: 0.7rem;
+    justify-content: center;
+    border-radius: 50%;
+    height: 1.8rem;
+    width: 1.8rem;
+  }
+  &.active {
+    background: var(--bg-light)
+      url(../media/patterns/system/light-rocky-wall.png);
     & .closer {
-        display: none;
+      display: flex;
+      &:hover {
+        background: hsl(0 100% 100% / 0.15);
       }
-    &.active {
-        background: var(--bg-light) url(../media/patterns/system/light-rocky-wall.png);
-        & .closer {
-          display: flex;
-        }
     }
+  }
 }
