--- a/src/css/inc/tab-navi.css
+++ b/src/css/inc/tab-navi.css
@@ -3,7 +3,7 @@ tab-navi {
   background: var(--bg-2-color);
   line-height: 2;
   overflow-x: auto;
-  overflow-y: hidden;
+  //overflow-y: hidden;
   border-bottom: .1rem solid var(--border-color);
   padding: 0;
   
@@ -17,5 +17,50 @@ tab-navi {
     &:hover {
       background: var(--bg-4-color);
     }
+  }
+}
+
+
+  
+.tab-context-menu {
+ // display: none;
+  position: absolute;
+  list-style: none;
+  padding: 0;
+  border: var(--border);
+  min-width: 20rem;
+  background: var(--bg-3-color);
+  filter: drop-shadow(1rem 1rem 1rem rgb(0, 0, 0, 0.3));
+
+  & li {
+    cursor: pointer;
+    padding: 0 1rem;
+    cursor: pointer;
+    line-height: 1.8;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    border-bottom: 1px solid rgb(255 255 255 / 0.08);
+    &::before {
+      content: '';
+      width: 2rem;
+      display: inline-block;
+      color: var(--hd-color)
+    }
+    &.context-danger {
+      &::before {
+        content: '⚠';
+      }
+    }
+
+    &:hover {
+      background: var(--bg-4-color);
+    }
+  }
+}
+
+& .tab-context {
+  & .tab-context-menu{
+    display: block
   }
 }
