--- a/src/css/inc/library-organizer.css
+++ b/src/css/inc/library-organizer.css
@@ -18,7 +18,7 @@ library-organizer {
     padding-top: 3.3rem;
     top: 0;
     left: -1000rem;
-    &:after {
+    &::after {
       content: "";
       // 3.3 = padding top
       width: calc(100% + (2 * 3.3rem));
