--- a/src/css/main.css
+++ b/src/css/main.css
@@ -7,6 +7,7 @@
 @import './inc/content.css';
 @import './inc/character-library.css';
 @import './inc/library-organizer.css';
+@import './inc/context-menu.css';
 @import './inc/tab-content.css';
 @import './inc/tab-navi.css';
 @import './inc/tab-handle.css';
