--- a/public/css/main.css
+++ b/public/css/main.css
@@ -453,22 +453,12 @@ library-organizer svg{
 
 library-organizer .sort-box{
     position:absolute;
-    padding-top:3.3rem;
+    padding-top:3rem;
     top:0;
-    left:-1000rem
+    right:1000rem;
+    box-shadow:0.24rem 0.24rem 0.64rem 0 hsla(0, 0%, 0%, 0.4);
+    box-shadow:0.24rem 0.24rem 0.64rem 0 var(--c-box-shadow-color)
   }
-
-library-organizer .sort-box::after{
-      content:"";
-      width:calc(100% + (2 * 3.3rem));
-      height:100%;
-      position:absolute;
-      bottom:-3.3rem;
-      right:-3.3rem;
-      background:rgba(0, 0, 0, 0.3);
-      z-index:-1;
-      filter:blur(2rem);
-    }
 
 library-organizer h3{
     padding-left:1rem;
@@ -494,7 +484,7 @@ library-organizer ul{
   }
 
 library-organizer:hover .sort-box{
-      left:0;
+      right:0;
     }
 
 library-organizer:hover svg{
