--- a/src/css/inc/library-organizer.css
+++ b/src/css/inc/library-organizer.css
@@ -15,21 +15,10 @@ library-organizer {
 
   & .sort-box {
     position: absolute;
-    padding-top: 3.3rem;
+    padding-top: 3rem;
     top: 0;
-    left: -1000rem;
-    &::after {
-      content: "";
-      // 3.3 = padding top
-      width: calc(100% + (2 * 3.3rem));
-      height: 100%;
-      position: absolute;
-      bottom: -3.3rem;
-      right: -3.3rem;
-      background: rgb(0, 0, 0, 0.3);
-      z-index: -1;
-      filter: blur(2rem);
-    }
+    right: 1000rem;
+    box-shadow: 0.24rem 0.24rem 0.64rem 0 var(--c-box-shadow-color)
   }
 
   & h3 {
@@ -52,7 +41,7 @@ library-organizer {
 
   &:hover {
     & .sort-box {
-      left: 0;
+      right: 0;
     }
     & svg {
       fill: var(--text-color);
