--- a/src/css/inc/card-base.css
+++ b/src/css/inc/card-base.css
@@ -26,6 +26,10 @@
 
 card-base {
   display: block;
+  
+  &:not(.editable){
+    cursor: pointer;
+  }
 
   & article {
     position: relative;
@@ -105,7 +109,7 @@ card-base {
     max-width: calc(100% - 0.8rem);
   }
 
-  &.summon {
+  /* &.summon {
     & .𝔘𝔫𝔥𝔬𝔩𝔡 {
       animation: summon 1s ease-in;
     }
@@ -115,7 +119,7 @@ card-base {
     & .𝔘𝔫𝔥𝔬𝔩𝔡 {
       animation: banish 1s ease-out;
     }
-  }
+  } */
 
   &.editable {
     width: 100%;
@@ -127,6 +131,14 @@ card-base {
       height: 100%;
       gap: 1rem
     }
+  }
+
+  &.cut {
+    opacity: .6
+  }
+
+  &:focus {
+    outline: .4rem var(--hd-color) solid
   }
 }
 
