--- a/src/css/inc/card-toolbar.css
+++ b/src/css/inc/card-toolbar.css
@@ -14,6 +14,10 @@ card-toolbar {
   z-index: 4;
   transition: opacity 0.5s;
 
+  & :focus {
+    outline: 0.1rem var(--hd-color) solid;
+  }
+
   & button {
     display: flex;
     align-items: center;
@@ -41,7 +45,7 @@ card-toolbar {
 }
 
 card-base {
-  &:hover {
+  &:hover, &:focus, &:focus-within {
     & card-toolbar {
       opacity: 1;
     }
