--- a/src/css/inc/card-verso.css
+++ b/src/css/inc/card-verso.css
@@ -15,6 +15,9 @@ card-verso {
       font-size: 1.5rem;
       line-height: 1.3;
       border-radius: 50%;
+      &:empty {
+        display: none;
+      }
     }
   }
 
