--- a/src/css/main.css
+++ b/src/css/main.css
@@ -4,6 +4,7 @@
 @import './inc/base.css';
 @import './inc/scrollbars.css';
 @import './inc/header.css';
+@import './inc/import-export.css';
 @import './inc/content.css';
 @import './inc/character-library.css';
 @import './inc/library-organizer.css';
