--- a/src/css/inc/header.css
+++ b/src/css/inc/header.css
@@ -4,13 +4,15 @@ header {
   height: var(--header-height);
   border-bottom: .1rem solid  var(--hd-color);
   background-image: url(../media/patterns/system/light-subtle-rocky-wall.png);
+  justify-content: space-between;
+  padding-inline: 1rem;
 }
 
 #logo-area {
   display: flex;
   align-items: center;
   justify-content: left;
-  padding: 1rem;
+  padding: 1rem 1rem 1rem 0;
   margin: 0;
   width: 25rem;
 
