fixed cut/copy/paste, built export, started import

--- a/src/css/inc/content.css
+++ b/src/css/inc/content.css
@@ -4,6 +4,12 @@ main {
   display: flex;
 }
 
+[data-import-state]{
+  & main {
+      display: none;
+  }
+}
+
 section, style-editor {
   &.column {
     display: flex;
