--- a/src/css/inc/tab-content.css
+++ b/src/css/inc/tab-content.css
@@ -1,20 +1,6 @@
-// container
+// tab container
 tab-content {
     display: flex;
     flex-direction: column;
     min-height: 100%;
 }
-
-// individual panel
-tab-panel {
-    display: none;
-    gap: 2.5rem;
-    flex-wrap: wrap;
-    flex: 2;
-    padding: 3.5rem 2.5rem;
-    align-items: flex-start;
-    &.active {
-        display: flex
-    }
-}
-
