--- a/public/css/main.css
+++ b/public/css/main.css
@@ -206,6 +206,10 @@ template{
   --resizer-color:hsl(204, 100%, 40%);
   --header-height:6.4rem;
   --footer-height:3rem;
+
+  --drop-zone-bg:hsla(0, 100%, 100%, .50); 
+  --drop-zone-border:.3rem dashed var(--bg-light); 
+  --drop-zone-active-border:.3rem dashed hsl(90, 100%, 22%); 
 }
 
 :root{
@@ -326,6 +330,27 @@ summary::marker{
     display:none;
   }
 
+button, .button{
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  border:none;
+  border-radius:.3rem;
+  border-radius:var(--border-radius);
+  gap:1rem;
+  font-size:1.5rem;
+  font-family:'Caudex', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+  font-family:var(--font-family);
+  cursor:pointer;
+  padding:0.6rem 1rem 0.6rem 1.6rem;
+  background:hsla(15, 50%, 15%, 0.9);
+  background:var(--c-button-bg);
+  color:hsla(0, 0%, 95%, .90);
+  color:var(--c-button-color);
+  box-shadow:0.24rem 0.24rem 0.64rem 0 hsla(0, 0%, 0%, 0.4);
+  box-shadow:0.24rem 0.24rem 0.64rem 0 var(--c-box-shadow-color);
+}
+
 [data-soft-deleted="true"]{
   display:none !important;
 }
@@ -402,20 +427,20 @@ import-export h3{
     font-size:1.6rem;
   }
 
-import-export div{
-    font-size:1.4rem;
-    position:absolute;
-    top:5rem;
-    right:-1000rem;
-    border:.1rem solid hsla(46, 85%, 39%, .3);
-    border:var(--border);
-    overflow-y:auto;
-    min-width:calc(100% - 2rem);
-    background:hsl(15, 50%, 24%);
-    background:var(--bg-3-color);
-    box-shadow:0.24rem 0.24rem 0.64rem 0 hsla(0, 0%, 0%, 0.4);
-    box-shadow:0.24rem 0.24rem 0.64rem 0 var(--c-box-shadow-color)
-  }
+import-export div.import-export-menu{
+      font-size:1.4rem;
+      position:absolute;
+      top:5rem;
+      right:-1000rem;
+      border:.1rem solid hsla(46, 85%, 39%, .3);
+      border:var(--border);
+      overflow-y:auto;
+      min-width:calc(100% - 2rem);
+      background:hsl(15, 50%, 24%);
+      background:var(--bg-3-color);
+      box-shadow:0.24rem 0.24rem 0.64rem 0 hsla(0, 0%, 0%, 0.4);
+      box-shadow:0.24rem 0.24rem 0.64rem 0 var(--c-box-shadow-color);
+    }
 
 import-export div a{
       display:block;
@@ -437,11 +462,176 @@ import-export:hover div{
       right:0;
     }
 
+@-webkit-keyframes axe-throw{
+  0%{
+    transform:translate(97.73%, 28.46%) rotate(0deg) scale(1);
+  }
+  10%{
+    transform:translate(90%, 50.77%) scale(1.2);
+  }
+  20%{
+    transform:translate(77.27%, 63.85%) scale(1.4);
+  }
+  30%{
+    transform:translate(62.27%, 73.08%) scale(1.6);
+  }
+  40%{
+    transform:translate(45.45%, 76.92%) scale(1.8);
+  }
+  50%{
+    transform:translate(29.55%, 70.77%) scale(2);
+  }
+  60%{
+    transform:translate(20.91%, 52.31%) scale(2.2);
+  }
+  70%{
+    transform:translate(26.82%, 29.23%) scale(2.4);
+  }
+  80%{
+    transform:translate(38.64%, 18.46%) scale(2.6);
+  }
+  90%{
+    transform:translate(49.55%, 27.69%) scale(2.8);
+  }
+  100%{
+    transform:translate(44.09%, 48.46%) rotate(360deg) scale(3);
+  }
+}
+
+@keyframes axe-throw{
+  0%{
+    transform:translate(97.73%, 28.46%) rotate(0deg) scale(1);
+  }
+  10%{
+    transform:translate(90%, 50.77%) scale(1.2);
+  }
+  20%{
+    transform:translate(77.27%, 63.85%) scale(1.4);
+  }
+  30%{
+    transform:translate(62.27%, 73.08%) scale(1.6);
+  }
+  40%{
+    transform:translate(45.45%, 76.92%) scale(1.8);
+  }
+  50%{
+    transform:translate(29.55%, 70.77%) scale(2);
+  }
+  60%{
+    transform:translate(20.91%, 52.31%) scale(2.2);
+  }
+  70%{
+    transform:translate(26.82%, 29.23%) scale(2.4);
+  }
+  80%{
+    transform:translate(38.64%, 18.46%) scale(2.6);
+  }
+  90%{
+    transform:translate(49.55%, 27.69%) scale(2.8);
+  }
+  100%{
+    transform:translate(44.09%, 48.46%) rotate(360deg) scale(3);
+  }
+}
+
+@-webkit-keyframes spin{
+  100%{
+    transform:rotate(-360deg);
+  }
+}
+
+@keyframes spin{
+  100%{
+    transform:rotate(-360deg);
+  }
+}
+
+file-upload{
+  min-height:100%;
+  flex:2;
+  display:none;
+  background:hsla(0, 100%, 100%, .50);
+  background:var(--drop-zone-bg);
+  color:hsl(15, 50%, 24%);
+  color:var(--bg-3-color)
+}
+
+file-upload form{
+    font-size:3rem;
+    margin:2rem;
+    border:.3rem dashed hsl(29, 33%, 34%);
+    border:var(--drop-zone-border);
+    border-radius:0.5rem;
+    display:none;
+    flex-direction:column;
+    align-items:center;
+    justify-content:center;
+    flex:2
+  }
+
+file-upload form.active,
+    file-upload form:hover{
+      border:.3rem dashed hsl(90, 100%, 22%);
+      border:var(--drop-zone-active-border);
+    }
+
+file-upload form label{
+      display:inline-block;
+      font:inherit;
+      cursor:pointer
+    }
+
+file-upload form label .button{
+        font:inherit;
+        font-weight:normal;
+        display:inline-block;
+        padding:0 1rem;
+        line-height:1.2;
+      }
+
+file-upload input{
+    display:none;
+  }
+
+file-upload .spinner{
+    display:none;
+    flex-direction:column;
+    border:1px red solid;
+    flex:2
+  }
+
+file-upload .spinner svg{
+      overflow:visible;
+      margin-top:3rem;
+      fill:hsl(15, 50%, 24%);
+      fill:var(--bg-3-color);
+      width:10rem;
+      height:10rem;
+      flex:2;
+      display:block;
+    }
+
+[data-import-state] file-upload{
+    display:flex;
+  }
+
+[data-import-state="pristine"] form{
+    display:flex;
+  }
+
+[data-import-state="working"] .spinner{
+    display:flex;
+  }
+
 main{
   flex:2;
   overflow-y:auto;
   display:flex;
 }
+
+[data-import-state] main{
+      display:none;
+  }
 
 section.column, style-editor.column{
     display:flex;
@@ -1074,27 +1264,6 @@ card-toolbar :focus{
     outline:0.1rem var(--hd-color) solid;
   }
 
-card-toolbar button{
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    border:none;
-    border-radius:.3rem;
-    border-radius:var(--border-radius);
-    gap:1rem;
-    font-size:1.5rem;
-    font-family:'Caudex', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-    font-family:var(--font-family);
-    cursor:pointer;
-    padding:0.6rem 1rem 0.6rem 1.6rem;
-    background:hsla(15, 50%, 15%, 0.9);
-    background:var(--c-button-bg);
-    color:hsla(0, 0%, 95%, .90);
-    color:var(--c-button-color);
-    box-shadow:0.24rem 0.24rem 0.64rem 0 hsla(0, 0%, 0%, 0.4);
-    box-shadow:0.24rem 0.24rem 0.64rem 0 var(--c-box-shadow-color)
-  }
-
 card-toolbar button[name="done"]{
       display:none;
     }
@@ -1463,6 +1632,24 @@ color-selector[type] > label span ~ span{
           flex:2;
         }
 
+@-webkit-keyframes undo-bg{
+  from{
+    background-color:hsl(104, 88%, 20%);
+  }
+  to{
+    background-color:hsl(348, 87%, 24%);
+  }
+}
+
+@keyframes undo-bg{
+  from{
+    background-color:hsl(104, 88%, 20%);
+  }
+  to{
+    background-color:hsl(348, 87%, 24%);
+  }
+}
+
 [data-undo-dialogs]{
   width:32rem;
   max-width:100%;
@@ -1472,7 +1659,8 @@ color-selector[type] > label span ~ span{
   padding:0 0 1rem 1rem;
   display:flex;
   flex-direction:column-reverse;
-  gap:0.1rem
+  gap:0.1rem;
+  z-index:4
 }
 
 [data-undo-dialogs] undo-dialog{
@@ -1481,10 +1669,10 @@ color-selector[type] > label span ~ span{
     border:var(--border);
     border-radius:.3rem;
     border-radius:var(--border-radius);
-    background:hsl(15, 50%, 15%)
-      url(../media/patterns/system/light-rocky-wall.png);
-    background:var(--bg-0-color)
-      url(../media/patterns/system/light-rocky-wall.png);
+    background-color:hsl(104, 88%, 20%);
+    background-image:url(../media/patterns/system/light-rocky-wall.png);
+    -webkit-animation:undo-bg 10s infinite;
+            animation:undo-bg 10s infinite;
     position:relative;
     padding:1.5rem 3.5rem 1.5rem 1.5rem
   }
@@ -1509,20 +1697,21 @@ color-selector[type] > label span ~ span{
       line-height:1;
       display:inline-block;
       position:absolute;
-      right:-.5rem;
+      right:-0.5rem;
       top:-1rem;
-      opacity:.7
+      opacity:0.7
     }
 
 [data-undo-dialogs] undo-dialog .closer:hover{
-          opacity:1;
+        opacity:1;
       }
 
 [data-undo-dialogs] undo-dialog button{
       border:none;
       cursor:pointer;
-      color:hsl(228, 62%, 76%);
       background:transparent;
+      box-shadow:none;
+      text-decoration:underline
     }
 
 form .form-row{
