--- a/src/css/inc/undo-dialog.css
+++ b/src/css/inc/undo-dialog.css
@@ -1,3 +1,11 @@
+@keyframes undo-bg {
+  from {
+    background-color: hsl(104, 88%, 20%);
+  }
+  to {
+    background-color: hsl(348, 87%, 24%);
+  }
+}
 [data-undo-dialogs] {
   width: 32rem;
   max-width: 100%;
@@ -8,13 +16,15 @@
   display: flex;
   flex-direction: column-reverse;
   gap: 0.1rem;
+  z-index: 4;
 
   & undo-dialog {
     display: block;
     border: var(--border);
     border-radius: var(--border-radius);
-    background: var(--bg-0-color)
-      url(../media/patterns/system/light-rocky-wall.png);
+    background-color: hsl(104, 88%, 20%);
+    background-image: url(../media/patterns/system/light-rocky-wall.png);
+    animation: undo-bg 10s infinite;
     position: relative;
     padding: 1.5rem 3.5rem 1.5rem 1.5rem;
 
@@ -38,19 +48,20 @@
       line-height: 1;
       display: inline-block;
       position: absolute;
-      right: -.5rem;
+      right: -0.5rem;
       top: -1rem;
-      opacity: .7;
+      opacity: 0.7;
       &:hover {
-          opacity: 1;
+        opacity: 1;
       }
     }
 
     & button {
       border: none;
       cursor: pointer;
-      color: hsl(228 62% 76%);
       background: transparent;
+      box-shadow: none;
+      text-decoration: underline
     }
   }
 }
