--- a/src/css/main.css
+++ b/src/css/main.css
@@ -5,11 +5,13 @@
 @import './inc/scrollbars.css';
 @import './inc/header.css';
 @import './inc/import-export.css';
+@import './inc/file-upload.css';
 @import './inc/content.css';
 @import './inc/character-library.css';
 @import './inc/library-organizer.css';
 @import './inc/context-menu.css';
 @import './inc/tab-content.css';
+@import './inc/tab-panel.css';
 @import './inc/tab-navi.css';
 @import './inc/tab-handle.css';
 @import './inc/card-base.css';
